// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeriodField render should render correctly 1`] = `
.emotion-16 {
  display: block;
}

.emotion-10 {
  background-color: #FFFFFF;
  border: 1px solid#AAAAB9;
  border-radius: 2px;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding-right: 2.5rem;
  padding-left: 0.1rem;
  -webkit-transition: box-shadow .2s ease;
  transition: box-shadow .2s ease;
}

.emotion-10:required {
  box-shadow: none;
}

.emotion-10:not(:disabled):hover {
  border-color: #8F8FA2;
}

.emotion-10:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-10:focus-within:not(:disabled) {
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
  outline: none;
}

.emotion-5 {
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-14 {
  position: relative;
}

.emotion-14 input {
  padding-right: 3rem;
}

.emotion-13 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-1 {
  position: relative;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #3A3A47;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  border: none;
}

.emotion-0[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-0:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::placeholder {
  color: #AAAAB9;
}

.emotion-0:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-0:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-0::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-0:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::placeholder {
  color: #AAAAB9;
}

.emotion-0:focus {
  box-shadow: none !important;
}

.emotion-11 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-4 {
  fill: currentColor;
  font-size: 1.5rem;
  background: transparent;
  cursor: default;
}

.emotion-12 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #3A3A47;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #3A3A47;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-12 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-12:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-12:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-12:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-12:focus {
  box-shadow: none;
}

.emotion-66 {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
  z-index: 1200;
  padding: 0rem;
  visibility: hidden;
  opacity: 0;
}

.emotion-65 {
  background: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  border-radius: 2px;
  padding: 0.5rem .25rem .25rem .25rem;
  outline: none;
}

.emotion-64 {
  width: 288px;
}

.emotion-27 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 0.5rem;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  margin-bottom: 0.5rem;
  font-weight: bold;
}

.emotion-21 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-18 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #3A3A47;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #3A3A47;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-18 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-18:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-18:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-18:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-63 {
  border-collapse: collapse;
  text-align: center;
  line-height: 1.5rem;
  width: 100%;
}

.emotion-63 th {
  width: 2rem;
  padding: 0.25rem 0;
}

.emotion-30 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
}

.emotion-30:hover {
  cursor: pointer;
  background: #F0F0F5;
}

.emotion-28 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
  color: #AAAAB9;
}

.emotion-28:hover {
  cursor: pointer;
  background: #F0F0F5;
}

.emotion-51 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
  font-weight: bold;
}

.emotion-51:hover {
  cursor: pointer;
  background: #F0F0F5;
}

<div>
  <div>
    <div
      class="emotion-16"
    >
      <div
        class="emotion-16"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-14"
          >
            <div
              class="emotion-10"
            >
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-2"
                >
                  <div
                    class="emotion-1"
                  >
                    <input
                      autocomplete="off"
                      class="emotion-0"
                      placeholder="dd/mm/aaaa"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <span
                class="emotion-5"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-4"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M16.586 13H5c-.667 0-1-.332-1-1 0-.668.333-1 1-1h11.586l-3.293-3.293a1 1 0 1 1 1.414-1.414l5 5a1 1 0 0 1 0 1.414l-5.001 5.001a1 1 0 1 1-1.414-1.414L16.586 13z"
                  />
                </svg>
              </span>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-2"
                >
                  <div
                    class="emotion-1"
                  >
                    <input
                      autocomplete="off"
                      class="emotion-0"
                      placeholder="dd/mm/aaaa"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <span
              class="emotion-13"
            >
              <button
                class="emotion-12"
                tabindex="-1"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    class="emotion-11"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <defs>
                      <path
                        d="M6 4h1V3c-.002-.667.33-1 1-1 .67 0 1.004.333 1.004 1v1H15V2.941c0-.627.333-.941 1-.941s1 .314 1 .941V4h1c1.333 0 2 .667 2 2v14c0 1.333-.667 2-2 2H6c-1.333 0-2-.667-2-2V6.004C4 4.668 4.667 4 6 4zm0 16h12V10H6v10zM6 6v2h12V6H6zm3 8c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H10c.667 0 1 .333 1 1s-.333 1-1 1H9zm5 0c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H15c.667 0 1 .333 1 1s-.333 1-1 1h-1zm-5 4c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H10c.667 0 1 .333 1 1s-.333 1-1 1H9zm5 0c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H15c.667 0 1 .333 1 1s-.333 1-1 1h-1z"
                        id="calendar-outline_svg__a"
                      />
                    </defs>
                    <use
                      xlink:href="#calendar-outline_svg__a"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
      <div
        class="emotion-66"
        data-visible="false"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="emotion-65"
          tabindex="-1"
        >
          <div
            class="emotion-64"
          >
            <div
              class="emotion-27"
            >
              <div
                class="emotion-21"
              >
                <button
                  class="emotion-18"
                  tabindex="-1"
                  title="Previous month"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-11"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M14.707 16.294a1 1 0 1 1-1.414 1.414l-5-5a1 1 0 0 1 0-1.414l5.001-5.001a1 1 0 0 1 1.414 1.414l-4.294 4.294 4.293 4.293z"
                      />
                    </svg>
                  </span>
                </button>
                Oct
                <button
                  class="emotion-18"
                  tabindex="-1"
                  title="Next month"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-11"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M8.294 7.707a1 1 0 1 1 1.414-1.414l5 5a1 1 0 0 1 0 1.414l-5 5.001a1 1 0 0 1-1.415-1.414L12.587 12 8.294 7.707z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
              <div
                class="emotion-21"
              >
                <button
                  class="emotion-18"
                  tabindex="-1"
                  title="Previous year"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-11"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M14.707 16.294a1 1 0 1 1-1.414 1.414l-5-5a1 1 0 0 1 0-1.414l5.001-5.001a1 1 0 0 1 1.414 1.414l-4.294 4.294 4.293 4.293z"
                      />
                    </svg>
                  </span>
                </button>
                2019
                <button
                  class="emotion-18"
                  tabindex="-1"
                  title="Next year"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-11"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M8.294 7.707a1 1 0 1 1 1.414-1.414l5 5a1 1 0 0 1 0 1.414l-5 5.001a1 1 0 0 1-1.415-1.414L12.587 12 8.294 7.707z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <table
              class="emotion-63"
            >
              <thead>
                <tr>
                  <th>
                    S
                  </th>
                  <th>
                    M
                  </th>
                  <th>
                    T
                  </th>
                  <th>
                    W
                  </th>
                  <th>
                    T
                  </th>
                  <th>
                    F
                  </th>
                  <th>
                    S
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    data-date="2019-09-29"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-28"
                      role="button"
                    >
                      29
                    </span>
                  </td>
                  <td
                    data-date="2019-09-30"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-28"
                      role="button"
                    >
                      30
                    </span>
                  </td>
                  <td
                    data-date="2019-10-01"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      01
                    </span>
                  </td>
                  <td
                    data-date="2019-10-02"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      02
                    </span>
                  </td>
                  <td
                    data-date="2019-10-03"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      03
                    </span>
                  </td>
                  <td
                    data-date="2019-10-04"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      04
                    </span>
                  </td>
                  <td
                    data-date="2019-10-05"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      05
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2019-10-06"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      06
                    </span>
                  </td>
                  <td
                    data-date="2019-10-07"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      07
                    </span>
                  </td>
                  <td
                    data-date="2019-10-08"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      08
                    </span>
                  </td>
                  <td
                    data-date="2019-10-09"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      09
                    </span>
                  </td>
                  <td
                    data-date="2019-10-10"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      10
                    </span>
                  </td>
                  <td
                    data-date="2019-10-11"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      11
                    </span>
                  </td>
                  <td
                    data-date="2019-10-12"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      12
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2019-10-13"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      13
                    </span>
                  </td>
                  <td
                    data-date="2019-10-14"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      14
                    </span>
                  </td>
                  <td
                    data-date="2019-10-15"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      15
                    </span>
                  </td>
                  <td
                    data-date="2019-10-16"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      16
                    </span>
                  </td>
                  <td
                    data-date="2019-10-17"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      17
                    </span>
                  </td>
                  <td
                    data-date="2019-10-18"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      18
                    </span>
                  </td>
                  <td
                    data-date="2019-10-19"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      19
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2019-10-20"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      20
                    </span>
                  </td>
                  <td
                    data-date="2019-10-21"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      21
                    </span>
                  </td>
                  <td
                    data-date="2019-10-22"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-51"
                      role="button"
                    >
                      22
                    </span>
                  </td>
                  <td
                    data-date="2019-10-23"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      23
                    </span>
                  </td>
                  <td
                    data-date="2019-10-24"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      24
                    </span>
                  </td>
                  <td
                    data-date="2019-10-25"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      25
                    </span>
                  </td>
                  <td
                    data-date="2019-10-26"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      26
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2019-10-27"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      27
                    </span>
                  </td>
                  <td
                    data-date="2019-10-28"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      28
                    </span>
                  </td>
                  <td
                    data-date="2019-10-29"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      29
                    </span>
                  </td>
                  <td
                    data-date="2019-10-30"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      30
                    </span>
                  </td>
                  <td
                    data-date="2019-10-31"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      31
                    </span>
                  </td>
                  <td
                    data-date="2019-11-01"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-28"
                      role="button"
                    >
                      01
                    </span>
                  </td>
                  <td
                    data-date="2019-11-02"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-28"
                      role="button"
                    >
                      02
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PeriodField render should render correctly when disabled 1`] = `
.emotion-16 {
  display: block;
}

.emotion-5 {
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-14 {
  position: relative;
}

.emotion-14 input {
  padding-right: 3rem;
}

.emotion-13 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-1 {
  position: relative;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #3A3A47;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  border: none;
}

.emotion-0[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-0:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::placeholder {
  color: #AAAAB9;
}

.emotion-0:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-0:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-0::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-0:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::placeholder {
  color: #AAAAB9;
}

.emotion-0:focus {
  box-shadow: none !important;
}

.emotion-11 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-66 {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
  z-index: 1200;
  padding: 0rem;
  visibility: hidden;
  opacity: 0;
}

.emotion-65 {
  background: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  border-radius: 2px;
  padding: 0.5rem .25rem .25rem .25rem;
  outline: none;
}

.emotion-64 {
  width: 288px;
}

.emotion-27 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 0.5rem;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  margin-bottom: 0.5rem;
  font-weight: bold;
}

.emotion-21 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-18 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #3A3A47;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #3A3A47;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-18 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-18:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-18:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-18:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-63 {
  border-collapse: collapse;
  text-align: center;
  line-height: 1.5rem;
  width: 100%;
}

.emotion-63 th {
  width: 2rem;
  padding: 0.25rem 0;
}

.emotion-30 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
}

.emotion-30:hover {
  cursor: pointer;
  background: #F0F0F5;
}

.emotion-28 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
  color: #AAAAB9;
}

.emotion-28:hover {
  cursor: pointer;
  background: #F0F0F5;
}

.emotion-51 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
  font-weight: bold;
}

.emotion-51:hover {
  cursor: pointer;
  background: #F0F0F5;
}

.emotion-10 {
  background-color: #FFFFFF;
  border: 1px solid#AAAAB9;
  border-radius: 2px;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding-right: 2.5rem;
  padding-left: 0.1rem;
  -webkit-transition: box-shadow .2s ease;
  transition: box-shadow .2s ease;
  background: #F0F0F5;
}

.emotion-10:required {
  box-shadow: none;
}

.emotion-10:not(:disabled):hover {
  border-color: #8F8FA2;
}

.emotion-10:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-10:focus-within:not(:disabled) {
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
  outline: none;
}

.emotion-4 {
  fill: currentColor;
  font-size: 1.5rem;
  background: transparent;
  color: #AAAAB9;
  cursor: default;
}

.emotion-12 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #3A3A47;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #3A3A47;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  cursor: not-allowed;
  opacity: 0.5;
  border-radius: inherit;
}

.emotion-12 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-12:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-12:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-12:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-12:focus {
  box-shadow: none;
}

<div>
  <div>
    <div
      class="emotion-16"
    >
      <div
        class="emotion-16"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-14"
          >
            <div
              class="emotion-10"
            >
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-2"
                >
                  <div
                    class="emotion-1"
                  >
                    <input
                      autocomplete="off"
                      class="emotion-0"
                      disabled=""
                      placeholder="dd/mm/aaaa"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <span
                class="emotion-5"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-4"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M16.586 13H5c-.667 0-1-.332-1-1 0-.668.333-1 1-1h11.586l-3.293-3.293a1 1 0 1 1 1.414-1.414l5 5a1 1 0 0 1 0 1.414l-5.001 5.001a1 1 0 1 1-1.414-1.414L16.586 13z"
                  />
                </svg>
              </span>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-2"
                >
                  <div
                    class="emotion-1"
                  >
                    <input
                      autocomplete="off"
                      class="emotion-0"
                      disabled=""
                      placeholder="dd/mm/aaaa"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <span
              class="emotion-13"
            >
              <button
                class="emotion-12"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    class="emotion-11"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <defs>
                      <path
                        d="M6 4h1V3c-.002-.667.33-1 1-1 .67 0 1.004.333 1.004 1v1H15V2.941c0-.627.333-.941 1-.941s1 .314 1 .941V4h1c1.333 0 2 .667 2 2v14c0 1.333-.667 2-2 2H6c-1.333 0-2-.667-2-2V6.004C4 4.668 4.667 4 6 4zm0 16h12V10H6v10zM6 6v2h12V6H6zm3 8c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H10c.667 0 1 .333 1 1s-.333 1-1 1H9zm5 0c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H15c.667 0 1 .333 1 1s-.333 1-1 1h-1zm-5 4c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H10c.667 0 1 .333 1 1s-.333 1-1 1H9zm5 0c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H15c.667 0 1 .333 1 1s-.333 1-1 1h-1z"
                        id="calendar-outline_svg__a"
                      />
                    </defs>
                    <use
                      xlink:href="#calendar-outline_svg__a"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
      <div
        class="emotion-66"
        data-visible="false"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="emotion-65"
          tabindex="-1"
        >
          <div
            class="emotion-64"
          >
            <div
              class="emotion-27"
            >
              <div
                class="emotion-21"
              >
                <button
                  class="emotion-18"
                  tabindex="-1"
                  title="Previous month"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-11"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M14.707 16.294a1 1 0 1 1-1.414 1.414l-5-5a1 1 0 0 1 0-1.414l5.001-5.001a1 1 0 0 1 1.414 1.414l-4.294 4.294 4.293 4.293z"
                      />
                    </svg>
                  </span>
                </button>
                Oct
                <button
                  class="emotion-18"
                  tabindex="-1"
                  title="Next month"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-11"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M8.294 7.707a1 1 0 1 1 1.414-1.414l5 5a1 1 0 0 1 0 1.414l-5 5.001a1 1 0 0 1-1.415-1.414L12.587 12 8.294 7.707z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
              <div
                class="emotion-21"
              >
                <button
                  class="emotion-18"
                  tabindex="-1"
                  title="Previous year"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-11"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M14.707 16.294a1 1 0 1 1-1.414 1.414l-5-5a1 1 0 0 1 0-1.414l5.001-5.001a1 1 0 0 1 1.414 1.414l-4.294 4.294 4.293 4.293z"
                      />
                    </svg>
                  </span>
                </button>
                2019
                <button
                  class="emotion-18"
                  tabindex="-1"
                  title="Next year"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-11"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M8.294 7.707a1 1 0 1 1 1.414-1.414l5 5a1 1 0 0 1 0 1.414l-5 5.001a1 1 0 0 1-1.415-1.414L12.587 12 8.294 7.707z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <table
              class="emotion-63"
            >
              <thead>
                <tr>
                  <th>
                    S
                  </th>
                  <th>
                    M
                  </th>
                  <th>
                    T
                  </th>
                  <th>
                    W
                  </th>
                  <th>
                    T
                  </th>
                  <th>
                    F
                  </th>
                  <th>
                    S
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    data-date="2019-09-29"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-28"
                      role="button"
                    >
                      29
                    </span>
                  </td>
                  <td
                    data-date="2019-09-30"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-28"
                      role="button"
                    >
                      30
                    </span>
                  </td>
                  <td
                    data-date="2019-10-01"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      01
                    </span>
                  </td>
                  <td
                    data-date="2019-10-02"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      02
                    </span>
                  </td>
                  <td
                    data-date="2019-10-03"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      03
                    </span>
                  </td>
                  <td
                    data-date="2019-10-04"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      04
                    </span>
                  </td>
                  <td
                    data-date="2019-10-05"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      05
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2019-10-06"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      06
                    </span>
                  </td>
                  <td
                    data-date="2019-10-07"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      07
                    </span>
                  </td>
                  <td
                    data-date="2019-10-08"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      08
                    </span>
                  </td>
                  <td
                    data-date="2019-10-09"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      09
                    </span>
                  </td>
                  <td
                    data-date="2019-10-10"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      10
                    </span>
                  </td>
                  <td
                    data-date="2019-10-11"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      11
                    </span>
                  </td>
                  <td
                    data-date="2019-10-12"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      12
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2019-10-13"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      13
                    </span>
                  </td>
                  <td
                    data-date="2019-10-14"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      14
                    </span>
                  </td>
                  <td
                    data-date="2019-10-15"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      15
                    </span>
                  </td>
                  <td
                    data-date="2019-10-16"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      16
                    </span>
                  </td>
                  <td
                    data-date="2019-10-17"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      17
                    </span>
                  </td>
                  <td
                    data-date="2019-10-18"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      18
                    </span>
                  </td>
                  <td
                    data-date="2019-10-19"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      19
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2019-10-20"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      20
                    </span>
                  </td>
                  <td
                    data-date="2019-10-21"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      21
                    </span>
                  </td>
                  <td
                    data-date="2019-10-22"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-51"
                      role="button"
                    >
                      22
                    </span>
                  </td>
                  <td
                    data-date="2019-10-23"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      23
                    </span>
                  </td>
                  <td
                    data-date="2019-10-24"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      24
                    </span>
                  </td>
                  <td
                    data-date="2019-10-25"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      25
                    </span>
                  </td>
                  <td
                    data-date="2019-10-26"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      26
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2019-10-27"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      27
                    </span>
                  </td>
                  <td
                    data-date="2019-10-28"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      28
                    </span>
                  </td>
                  <td
                    data-date="2019-10-29"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      29
                    </span>
                  </td>
                  <td
                    data-date="2019-10-30"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      30
                    </span>
                  </td>
                  <td
                    data-date="2019-10-31"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      31
                    </span>
                  </td>
                  <td
                    data-date="2019-11-01"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-28"
                      role="button"
                    >
                      01
                    </span>
                  </td>
                  <td
                    data-date="2019-11-02"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-28"
                      role="button"
                    >
                      02
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PeriodField render should render correctly when invalid 1`] = `
.emotion-16 {
  display: block;
}

.emotion-5 {
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-14 {
  position: relative;
}

.emotion-14 input {
  padding-right: 3rem;
}

.emotion-13 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-1 {
  position: relative;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #3A3A47;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  border: none;
}

.emotion-0[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-0:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::placeholder {
  color: #AAAAB9;
}

.emotion-0:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-0:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-0::-webkit-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::-moz-placeholder {
  color: #AAAAB9;
}

.emotion-0:-ms-input-placeholder {
  color: #AAAAB9;
}

.emotion-0::placeholder {
  color: #AAAAB9;
}

.emotion-0:focus {
  box-shadow: none !important;
}

.emotion-11 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-4 {
  fill: currentColor;
  font-size: 1.5rem;
  background: transparent;
  cursor: default;
}

.emotion-12 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #3A3A47;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #3A3A47;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-12 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-12:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-12:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-12:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-12:focus {
  box-shadow: none;
}

.emotion-66 {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
  z-index: 1200;
  padding: 0rem;
  visibility: hidden;
  opacity: 0;
}

.emotion-65 {
  background: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  border-radius: 2px;
  padding: 0.5rem .25rem .25rem .25rem;
  outline: none;
}

.emotion-64 {
  width: 288px;
}

.emotion-27 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 0.5rem;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  margin-bottom: 0.5rem;
  font-weight: bold;
}

.emotion-21 {
  display: grid;
  grid-auto-flow: column;
  grid-auto-columns: minmax(min-content,max-content);
  grid-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-18 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #3A3A47;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #3A3A47;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-18 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-18:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-18:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-18:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-63 {
  border-collapse: collapse;
  text-align: center;
  line-height: 1.5rem;
  width: 100%;
}

.emotion-63 th {
  width: 2rem;
  padding: 0.25rem 0;
}

.emotion-30 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
}

.emotion-30:hover {
  cursor: pointer;
  background: #F0F0F5;
}

.emotion-28 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
  color: #AAAAB9;
}

.emotion-28:hover {
  cursor: pointer;
  background: #F0F0F5;
}

.emotion-51 {
  width: 2rem;
  padding: 0.25rem 0;
  display: inline-block;
  border-radius: 50%;
  font-weight: bold;
}

.emotion-51:hover {
  cursor: pointer;
  background: #F0F0F5;
}

.emotion-10 {
  background-color: #FFFFFF;
  border: 1px solid#AAAAB9;
  border-radius: 2px;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  padding-right: 2.5rem;
  padding-left: 0.1rem;
  -webkit-transition: box-shadow .2s ease;
  transition: box-shadow .2s ease;
  border: solid 1px #D01E29;
}

.emotion-10:required {
  box-shadow: none;
}

.emotion-10:not(:disabled):hover {
  border-color: #8F8FA2;
}

.emotion-10:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-10:focus-within:not(:disabled) {
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
  outline: none;
}

.emotion-10:focus-within:not(:disabled) {
  border: solid 1px #D3D4DD;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #D01E29;
}

<div>
  <div>
    <div
      class="emotion-16"
    >
      <div
        class="emotion-16"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-14"
          >
            <div
              class="emotion-10"
            >
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-2"
                >
                  <div
                    class="emotion-1"
                  >
                    <input
                      autocomplete="off"
                      class="emotion-0"
                      placeholder="dd/mm/aaaa"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <span
                class="emotion-5"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-4"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M16.586 13H5c-.667 0-1-.332-1-1 0-.668.333-1 1-1h11.586l-3.293-3.293a1 1 0 1 1 1.414-1.414l5 5a1 1 0 0 1 0 1.414l-5.001 5.001a1 1 0 1 1-1.414-1.414L16.586 13z"
                  />
                </svg>
              </span>
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-2"
                >
                  <div
                    class="emotion-1"
                  >
                    <input
                      autocomplete="off"
                      class="emotion-0"
                      placeholder="dd/mm/aaaa"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <span
              class="emotion-13"
            >
              <button
                class="emotion-12"
                tabindex="-1"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    class="emotion-11"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <defs>
                      <path
                        d="M6 4h1V3c-.002-.667.33-1 1-1 .67 0 1.004.333 1.004 1v1H15V2.941c0-.627.333-.941 1-.941s1 .314 1 .941V4h1c1.333 0 2 .667 2 2v14c0 1.333-.667 2-2 2H6c-1.333 0-2-.667-2-2V6.004C4 4.668 4.667 4 6 4zm0 16h12V10H6v10zM6 6v2h12V6H6zm3 8c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H10c.667 0 1 .333 1 1s-.333 1-1 1H9zm5 0c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H15c.667 0 1 .333 1 1s-.333 1-1 1h-1zm-5 4c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H10c.667 0 1 .333 1 1s-.333 1-1 1H9zm5 0c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H15c.667 0 1 .333 1 1s-.333 1-1 1h-1z"
                        id="calendar-outline_svg__a"
                      />
                    </defs>
                    <use
                      xlink:href="#calendar-outline_svg__a"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
      <div
        class="emotion-66"
        data-visible="false"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="emotion-65"
          tabindex="-1"
        >
          <div
            class="emotion-64"
          >
            <div
              class="emotion-27"
            >
              <div
                class="emotion-21"
              >
                <button
                  class="emotion-18"
                  tabindex="-1"
                  title="Previous month"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-11"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M14.707 16.294a1 1 0 1 1-1.414 1.414l-5-5a1 1 0 0 1 0-1.414l5.001-5.001a1 1 0 0 1 1.414 1.414l-4.294 4.294 4.293 4.293z"
                      />
                    </svg>
                  </span>
                </button>
                Oct
                <button
                  class="emotion-18"
                  tabindex="-1"
                  title="Next month"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-11"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M8.294 7.707a1 1 0 1 1 1.414-1.414l5 5a1 1 0 0 1 0 1.414l-5 5.001a1 1 0 0 1-1.415-1.414L12.587 12 8.294 7.707z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
              <div
                class="emotion-21"
              >
                <button
                  class="emotion-18"
                  tabindex="-1"
                  title="Previous year"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-11"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M14.707 16.294a1 1 0 1 1-1.414 1.414l-5-5a1 1 0 0 1 0-1.414l5.001-5.001a1 1 0 0 1 1.414 1.414l-4.294 4.294 4.293 4.293z"
                      />
                    </svg>
                  </span>
                </button>
                2019
                <button
                  class="emotion-18"
                  tabindex="-1"
                  title="Next year"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-11"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M8.294 7.707a1 1 0 1 1 1.414-1.414l5 5a1 1 0 0 1 0 1.414l-5 5.001a1 1 0 0 1-1.415-1.414L12.587 12 8.294 7.707z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <table
              class="emotion-63"
            >
              <thead>
                <tr>
                  <th>
                    S
                  </th>
                  <th>
                    M
                  </th>
                  <th>
                    T
                  </th>
                  <th>
                    W
                  </th>
                  <th>
                    T
                  </th>
                  <th>
                    F
                  </th>
                  <th>
                    S
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    data-date="2019-09-29"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-28"
                      role="button"
                    >
                      29
                    </span>
                  </td>
                  <td
                    data-date="2019-09-30"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-28"
                      role="button"
                    >
                      30
                    </span>
                  </td>
                  <td
                    data-date="2019-10-01"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      01
                    </span>
                  </td>
                  <td
                    data-date="2019-10-02"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      02
                    </span>
                  </td>
                  <td
                    data-date="2019-10-03"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      03
                    </span>
                  </td>
                  <td
                    data-date="2019-10-04"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      04
                    </span>
                  </td>
                  <td
                    data-date="2019-10-05"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      05
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2019-10-06"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      06
                    </span>
                  </td>
                  <td
                    data-date="2019-10-07"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      07
                    </span>
                  </td>
                  <td
                    data-date="2019-10-08"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      08
                    </span>
                  </td>
                  <td
                    data-date="2019-10-09"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      09
                    </span>
                  </td>
                  <td
                    data-date="2019-10-10"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      10
                    </span>
                  </td>
                  <td
                    data-date="2019-10-11"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      11
                    </span>
                  </td>
                  <td
                    data-date="2019-10-12"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      12
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2019-10-13"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      13
                    </span>
                  </td>
                  <td
                    data-date="2019-10-14"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      14
                    </span>
                  </td>
                  <td
                    data-date="2019-10-15"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      15
                    </span>
                  </td>
                  <td
                    data-date="2019-10-16"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      16
                    </span>
                  </td>
                  <td
                    data-date="2019-10-17"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      17
                    </span>
                  </td>
                  <td
                    data-date="2019-10-18"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      18
                    </span>
                  </td>
                  <td
                    data-date="2019-10-19"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      19
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2019-10-20"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      20
                    </span>
                  </td>
                  <td
                    data-date="2019-10-21"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      21
                    </span>
                  </td>
                  <td
                    data-date="2019-10-22"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-51"
                      role="button"
                    >
                      22
                    </span>
                  </td>
                  <td
                    data-date="2019-10-23"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      23
                    </span>
                  </td>
                  <td
                    data-date="2019-10-24"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      24
                    </span>
                  </td>
                  <td
                    data-date="2019-10-25"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      25
                    </span>
                  </td>
                  <td
                    data-date="2019-10-26"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      26
                    </span>
                  </td>
                </tr>
                <tr>
                  <td
                    data-date="2019-10-27"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      27
                    </span>
                  </td>
                  <td
                    data-date="2019-10-28"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      28
                    </span>
                  </td>
                  <td
                    data-date="2019-10-29"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      29
                    </span>
                  </td>
                  <td
                    data-date="2019-10-30"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      30
                    </span>
                  </td>
                  <td
                    data-date="2019-10-31"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-30"
                      role="button"
                    >
                      31
                    </span>
                  </td>
                  <td
                    data-date="2019-11-01"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-28"
                      role="button"
                    >
                      01
                    </span>
                  </td>
                  <td
                    data-date="2019-11-02"
                  >
                    <span
                      aria-selected="false"
                      class="emotion-28"
                      role="button"
                    >
                      02
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
